--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://google.com" alt="">
+  <img src="https://google.com" alt="Google website">
+  <img src="https://google.com" alt="Google website" title="This Is Google!">
 
 </body>
 </html>
